src/v8/CAPI_Reactors.pas


//------------------------------------------------------------------------------
PROCEDURE Reactors_Get_Z0(var ResultPtr: PDouble; ResultCount: PInteger);cdecl;
VAR
    Result: PDoubleArray;
    pReactor: TReactorObj;
begin
    Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);
    if ActiveReactor(pReactor) <> Nil
    THEN WITH pReactor DO 
    Begin
        Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, 2);
        Result[0] := Z0.Re;
        Result[1] := Z0.Im;
    End;
end;
PROCEDURE Reactors_Get_Z0_GR();cdecl;
// Same as Reactors_Get_Z0 but uses global result (GR) pointers
begin
   Reactors_Get_Z0(GR_DataPtr_PDouble, GR_CountPtr_PDouble)
end;

//------------------------------------------------------------------------------
PROCEDURE Reactors_Get_Z(var ResultPtr: PDouble; ResultCount: PInteger);cdecl;
VAR
    Result: PDoubleArray;
    pReactor: TReactorObj;
begin
    Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, (0) + 1);
    if ActiveReactor(pReactor) <> Nil
    THEN WITH pReactor DO 
    Begin
        Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, 2);
        Result[0] := R;
        Result[1] := X;
    End;
end;
PROCEDURE Reactors_Get_Z_GR();cdecl;
// Same as Reactors_Get_Z but uses global result (GR) pointers
begin
   Reactors_Get_Z(GR_DataPtr_PDouble, GR_CountPtr_PDouble)
end;

//------------------------------------------------------------------------------
PROCEDURE Reactors_Set_Z2(ValuePtr: PDouble; ValueCount: Integer);cdecl;
VAR
    Value: PDoubleArray;
    pReactor: TReactorObj;
begin
    Value := PDoubleArray(ValuePtr);
    if (ActiveReactor(pReactor) <> Nil) and (ValueCount = 2)
    THEN WITH pReactor DO 
    Begin
        Z2 := Cmplx(Value[0], Value[1]);
        ReactorPropSideEffects(ReactorProps.Z2, pReactor);
    End;
end;
//------------------------------------------------------------------------------
PROCEDURE Reactors_Set_Z1(ValuePtr: PDouble; ValueCount: Integer);cdecl;
VAR
    Value: PDoubleArray;
    pReactor: TReactorObj;
begin
    Value := PDoubleArray(ValuePtr);
    if (ActiveReactor(pReactor) <> Nil) and (ValueCount = 2)
    THEN WITH pReactor DO 
    Begin
        Z1 := Cmplx(Value[0], Value[1]);
        ReactorPropSideEffects(ReactorProps.Z1, pReactor);
    End;
end;
//------------------------------------------------------------------------------
PROCEDURE Reactors_Set_Z0(ValuePtr: PDouble; ValueCount: Integer);cdecl;
VAR
    Value: PDoubleArray;
    pReactor: TReactorObj;
begin
    Value := PDoubleArray(ValuePtr);
    if (ActiveReactor(pReactor) <> Nil) and (ValueCount = 2)
    THEN WITH pReactor DO 
    Begin
        Z0 := Cmplx(Value[0], Value[1]);
        ReactorPropSideEffects(ReactorProps.Z0, pReactor);
    End;
end;
//------------------------------------------------------------------------------
PROCEDURE Reactors_Set_Z(ValuePtr: PDouble; ValueCount: Integer);cdecl;
VAR
    Value: PDoubleArray;
    pReactor: TReactorObj;
begin
    Value := PDoubleArray(ValuePtr);
    if (ActiveReactor(pReactor) <> Nil) and (ValueCount = 2)
    THEN WITH pReactor DO 
    Begin
        Z := Cmplx(Value[0], Value[1]);
        ReactorPropSideEffects(ReactorProps.Z, pReactor);
    End;
end;
//------------------------------------------------------------------------------

END.
